=== 1.6.0 ====
    * new documentation for some methods and function
    * decode json with content type charset
    * code refactoring
    * new hex filter
    * syntax highlighting for example in readme
    * log_info method and encoding error message to ascci when is needed
    * profiling bug fix (problem with Application class)
    * documentation fix for new jinja24doc
    * app and appplication is deprecated now
    * PEP8 code style
    * new Request is_body_request property
    * tests in separate directory
    * Application.debug, Application.document_root and
      Application.document_index
    * better html_escape
    * better hbytes as human bytes function
    * results rewrite and fix theis outputs
    * remove deprecated Request.subprocess_env
    * remove deprecated Request.add_common_vars
    * remove deprecated request.SERVER_RETURN
    * Application name property
    * app and application is at poorwsgi module now (__init__.py)
    * Profiling rewrite

==== 1.5.2 ====
    * Info about unstable branch

==== 1.5.1 ====
    * append missing cmp function when python3 is use
    * errors must be flushed
    * Broken client connection detection
    * move documentation to separate README.rst
    * moved to GitHub (fix links)

==== 1.5.0 ====
    * http response 304 Not Modified supported
    * new req.uri_hadler property
    * set req.uri_hadler and req.uri_rule before calling pre handlers, but after
      end point handler is known
    * new get_options and log_error methods of Application object
    * pre process handlers are run for http status handlers if not run yet
    * not implement error got http status code
    * bad request error page and error log on not implement method

==== 1.4.2 ====
    * bug fix when setting req.clength

==== 1.4.1 ====
    * append Secret Key about info to debug-info page
    * fix ini config examples - documentation can't be on same line as variable
    * fix menu links (diskusion and Facebook to PyPI)
